<resources>
    <string name="app_name">Nav Withbottom</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_card">Card</string>
    <string name="title_camera">Camera</string>
    <string name="title_message">Message</string>
    <string name="title_exchange">Exchange</string>
    <string name="title_user">User</string>
    <string name="text_content">text to fill up</string>
    <string name="user_name">User One</string>
    <string name="txt_messages">Messages Fragment</string>


</resources>
