<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_card"
        android:icon="@drawable/ic_credit_card_black_48dp"
        android:title="@string/title_card" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message_black_48dp"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_camera_black_48dp"
        android:title="@string/title_camera" />
    <item
        android:id="@+id/navigation_exchange"
        android:icon="@drawable/ic_track_changes_black_48dp"
        android:title="@string/title_exchange" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_account_circle_black_48dp"
        android:title="@string/title_user" />

</menu>
